<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">
        tools:context=".ui.RecipeDetailActivity">

        <com.alespero.expandablecardview.ExpandableCardView
            android:id="@+id/ec_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            app:animationDuration="300"
            app:cardCornerRadius="18dp"
            app:expandOnClick="true"
            app:inner_view="@layout/ingredients"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startExpanded="false"
            app:title="@string/recipe_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_step"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ec_ingredients" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>